welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:30: error: not found: value c
  slash(c:Color)
        ^PatternPicture:32: error: not found: value c
  aslash(c:Color)
         ^PatternPicture:33: error: not found: value c
  slash(c:Color)
        ^PatternPicture:34: error: not found: value c
  aslash(c:Color)
         ^