welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def brosse(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}

def slash(c:Color){
  avance()
  brosse(c)
  recule()
  gauche()
  avance()
  brosse(c)
  recule()
  droite()
}

def aslash(c:Color){
  brosse(c)
  avance()
  gauche()
  avance()
  brosse(c)
  recule()
  droite()
  recule()
}

def motif(){
  slash(c:Color)
  avance(2)
  aslash(c:Color)
  slash(c:Color)
  aslash(c:Color)
}

override def run() {
}